--- a/src/app/components/edit-task/edit-task.component.html
+++ b/src/app/components/edit-task/edit-task.component.html
@@ -1,1 +1,39 @@
-<p>{{ taskId }}</p>
+<div class="container">
+  <div class="border border-2 rounded-2 m-5 p-5">
+    <h4>Edit Task</h4>
+    <hr />
+    <form [formGroup]="editTaskForm">
+      <div class="mb-3">
+        <label for="title" class="form-label">Title</label>
+        <input
+          id="title"
+          class="form-control"
+          type="text"
+          formControlName="title"
+        />
+      </div>
+      <div class="mb-3">
+        <label for="description" class="form-label">Description</label>
+        <textarea
+          id="description"
+          class="form-control"
+          rows="2"
+          formControlName="description"
+        ></textarea>
+      </div>
+      <div class="mb-3">
+        <label for="status" class="form-label">Status</label>
+        <select id="status" class="form-select" formControlName="status">
+          <option value="1" selected>Pending</option>
+          <option value="2">Complete</option>
+        </select>
+      </div>
+      <br />
+      <hr />
+      <div class="pt-3 d-flex justify-content-between">
+        <button class="btn btn-secondary" routerLink="/tasks">Back</button>
+        <button class="btn btn-primary">Save</button>
+      </div>
+    </form>
+  </div>
+</div>
